# GPEqx

./: README.md  pyproject.toml
gpeqx/kernels/: __init__.py  base.py
gpeqx/kernels/approximations/: __init__.py  rff.py
gpeqx/kernels/computations/: __init__.py  base.py  basis_functions.py  constant_diagonal.py  dense.py  diagonal.py  eigen.py
gpeqx/kernels/non_euclidean/: __init__.py  graph.py  utils.py
gpeqx/kernels/nonstationary/: __init__.py  arccosine.py  linear.py  polynomial.py
gpeqx/kernels/stationary/: __init__.py  base.py  matern12.py  matern32.py  matern52.py  periodic.py  powered_exponential.py  rational_quadratic.py  rbf.py  utils.py  white.py
